crates/pg_syntax/tests/snapshots/postgres_regress/brin_bloom@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE INDEX brinidx_bloom ON brintest_bloom USING brin (\n\tbyteacol bytea_bloom_ops,\n\tcharcol char_bloom_ops,\n\tnamecol name_bloom_ops,\n\tint8col int8_bloom_ops,\n\tint2col int2_bloom_ops,\n\tint4col int4_bloom_ops,\n\ttextcol text_bloom_ops,\n\toidcol oid_bloom_ops,\n\tfloat4col float4_bloom_ops,\n\tfloat8col float8_bloom_ops,\n\tmacaddrcol macaddr_bloom_ops,\n\tinetcol inet_bloom_ops,\n\tcidrcol inet_bloom_ops,\n\tbpcharcol bpchar_bloom_ops,\n\tdatecol date_bloom_ops,\n\ttimecol time_bloom_ops,\n\ttimestampcol timestamp_bloom_ops,\n\ttimestamptzcol timestamptz_bloom_ops,\n\tintervalcol interval_bloom_ops,\n\ttimetzcol timetz_bloom_ops,\n\tnumericcol numeric_bloom_ops,\n\tuuidcol uuid_bloom_ops,\n\tlsncol pg_lsn_bloom_ops\n) with (pages_per_range = 1);"
---
IndexStmt@0..722
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..26 "brinidx_bloom"
  Whitespace@26..27 " "
  On@27..29 "ON"
  Whitespace@29..30 " "
  RangeVar@30..44
    Ident@30..44 "brintest_bloom"
  Whitespace@44..45 " "
  Using@45..50 "USING"
  Whitespace@50..51 " "
  Ident@51..55 "brin"
  Whitespace@55..56 " "
  Ascii40@56..57 "("
  Newline@57..58 "\n"
  Newline@58..59 "\t"
  IndexElem@59..83
    Ident@59..67 "byteacol"
    Whitespace@67..68 " "
    Ident@68..83 "bytea_bloom_ops"
  Ascii44@83..84 ","
  Newline@84..85 "\n"
  Newline@85..86 "\t"
  IndexElem@86..108
    Ident@86..93 "charcol"
    Whitespace@93..94 " "
    Ident@94..108 "char_bloom_ops"
  Ascii44@108..109 ","
  Newline@109..110 "\n"
  Newline@110..111 "\t"
  IndexElem@111..133
    Ident@111..118 "namecol"
    Whitespace@118..119 " "
    Ident@119..133 "name_bloom_ops"
  Ascii44@133..134 ","
  Newline@134..135 "\n"
  Newline@135..136 "\t"
  IndexElem@136..158
    Ident@136..143 "int8col"
    Whitespace@143..144 " "
    Ident@144..158 "int8_bloom_ops"
  Ascii44@158..159 ","
  Newline@159..160 "\n"
  Newline@160..161 "\t"
  IndexElem@161..183
    Ident@161..168 "int2col"
    Whitespace@168..169 " "
    Ident@169..183 "int2_bloom_ops"
  Ascii44@183..184 ","
  Newline@184..185 "\n"
  Newline@185..186 "\t"
  IndexElem@186..208
    Ident@186..193 "int4col"
    Whitespace@193..194 " "
    Ident@194..208 "int4_bloom_ops"
  Ascii44@208..209 ","
  Newline@209..210 "\n"
  Newline@210..211 "\t"
  IndexElem@211..233
    Ident@211..218 "textcol"
    Whitespace@218..219 " "
    Ident@219..233 "text_bloom_ops"
  Ascii44@233..234 ","
  Newline@234..235 "\n"
  Newline@235..236 "\t"
  IndexElem@236..256
    Ident@236..242 "oidcol"
    Whitespace@242..243 " "
    Ident@243..256 "oid_bloom_ops"
  Ascii44@256..257 ","
  Newline@257..258 "\n"
  Newline@258..259 "\t"
  IndexElem@259..285
    Ident@259..268 "float4col"
    Whitespace@268..269 " "
    Ident@269..285 "float4_bloom_ops"
  Ascii44@285..286 ","
  Newline@286..287 "\n"
  Newline@287..288 "\t"
  IndexElem@288..314
    Ident@288..297 "float8col"
    Whitespace@297..298 " "
    Ident@298..314 "float8_bloom_ops"
  Ascii44@314..315 ","
  Newline@315..316 "\n"
  Newline@316..317 "\t"
  IndexElem@317..345
    Ident@317..327 "macaddrcol"
    Whitespace@327..328 " "
    Ident@328..345 "macaddr_bloom_ops"
  Ascii44@345..346 ","
  Newline@346..347 "\n"
  Newline@347..348 "\t"
  IndexElem@348..370
    Ident@348..355 "inetcol"
    Whitespace@355..356 " "
    Ident@356..370 "inet_bloom_ops"
  Ascii44@370..371 ","
  Newline@371..372 "\n"
  Newline@372..373 "\t"
  IndexElem@373..395
    Ident@373..380 "cidrcol"
    Whitespace@380..381 " "
    Ident@381..395 "inet_bloom_ops"
  Ascii44@395..396 ","
  Newline@396..397 "\n"
  Newline@397..398 "\t"
  IndexElem@398..424
    Ident@398..407 "bpcharcol"
    Whitespace@407..408 " "
    Ident@408..424 "bpchar_bloom_ops"
  Ascii44@424..425 ","
  Newline@425..426 "\n"
  Newline@426..427 "\t"
  IndexElem@427..449
    Ident@427..434 "datecol"
    Whitespace@434..435 " "
    Ident@435..449 "date_bloom_ops"
  Ascii44@449..450 ","
  Newline@450..451 "\n"
  Newline@451..452 "\t"
  IndexElem@452..474
    Ident@452..459 "timecol"
    Whitespace@459..460 " "
    Ident@460..474 "time_bloom_ops"
  Ascii44@474..475 ","
  Newline@475..476 "\n"
  Newline@476..477 "\t"
  IndexElem@477..509
    Ident@477..489 "timestampcol"
    Whitespace@489..490 " "
    Ident@490..509 "timestamp_bloom_ops"
  Ascii44@509..510 ","
  Newline@510..511 "\n"
  Newline@511..512 "\t"
  IndexElem@512..548
    Ident@512..526 "timestamptzcol"
    Whitespace@526..527 " "
    Ident@527..548 "timestamptz_bloom_ops"
  Ascii44@548..549 ","
  Newline@549..550 "\n"
  Newline@550..551 "\t"
  IndexElem@551..581
    Ident@551..562 "intervalcol"
    Whitespace@562..563 " "
    Ident@563..581 "interval_bloom_ops"
  Ascii44@581..582 ","
  Newline@582..583 "\n"
  Newline@583..584 "\t"
  IndexElem@584..610
    Ident@584..593 "timetzcol"
    Whitespace@593..594 " "
    Ident@594..610 "timetz_bloom_ops"
  Ascii44@610..611 ","
  Newline@611..612 "\n"
  Newline@612..613 "\t"
  IndexElem@613..641
    Ident@613..623 "numericcol"
    Whitespace@623..624 " "
    Ident@624..641 "numeric_bloom_ops"
  Ascii44@641..642 ","
  Newline@642..643 "\n"
  Newline@643..644 "\t"
  IndexElem@644..666
    Ident@644..651 "uuidcol"
    Whitespace@651..652 " "
    Ident@652..666 "uuid_bloom_ops"
  Ascii44@666..667 ","
  Newline@667..668 "\n"
  Newline@668..669 "\t"
  IndexElem@669..692
    Ident@669..675 "lsncol"
    Whitespace@675..676 " "
    Ident@676..692 "pg_lsn_bloom_ops"
  Newline@692..693 "\n"
  Ascii41@693..694 ")"
  Whitespace@694..695 " "
  With@695..699 "with"
  Whitespace@699..700 " "
  Ascii40@700..701 "("
  DefElem@701..720
    Ident@701..716 "pages_per_range"
    Whitespace@716..717 " "
    Ascii61@717..718 "="
    Whitespace@718..719 " "
    Iconst@719..720 "1"
  Ascii41@720..721 ")"
  Ascii59@721..722 ";"

