crates/pg_syntax/tests/snapshots/postgres_regress/brin_multi@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_desummarize_range('brinidx_multi', 100000000);"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..29 "brin_desummarize_range"
      Ascii40@29..30 "("
      AConst@30..45
        Sconst@30..45 "'brinidx_multi'"
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      AConst@47..56
        Iconst@47..56 "100000000"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

