crates/pg_syntax/tests/snapshots/postgres_regress/brin_multi@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX brin_summarize_multi_idx ON brin_summarize_multi USING brin (value) WITH (pages_per_range=2);
---
IndexStmt@0..106
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..37 "brin_summarize_multi_idx"
  Whitespace@37..38 " "
  On@38..40 "ON"
  Whitespace@40..41 " "
  RangeVar@41..61
    Ident@41..61 "brin_summarize_multi"
  Whitespace@61..62 " "
  Using@62..67 "USING"
  Whitespace@67..68 " "
  Ident@68..72 "brin"
  Whitespace@72..73 " "
  Ascii40@73..74 "("
  IndexElem@74..79
    ValueP@74..79 "value"
  Ascii41@79..80 ")"
  Whitespace@80..81 " "
  With@81..85 "WITH"
  Whitespace@85..86 " "
  Ascii40@86..87 "("
  DefElem@87..104
    Ident@87..102 "pages_per_range"
    Ascii61@102..103 "="
    Iconst@103..104 "2"
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

